# crypto-gradient-boosting-trader

./: README.md  backtest_output.txt  methodology.md  pyproject.toml
data/raw/: BTCUSDT_15m_regime.parquet
scripts/: backtest.py  backtest_final.py  backtest_improved.py  backtest_one.py  visualise_backtest.py  visualize_backtest.py
src/: __init__.py
src/crypto_gradient_boosting_trader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/trader/backtester/: cv.py  simulate.py
src/trader/data/: __init__.py  ccxt_client.py  fetch.py  storage.py
src/trader/features/: build.py  selectors.py  ta.py
src/trader/labels/: __init__.py  cost_aware.py
src/trader/models/: __init__.py  gbdt.py
src/trader/strategy/: regime.py  rules.py
tests/: conftest.py  test_fetch.py
